--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Publications</heading> &nbsp;&nbsp;
-                  (<a href="" id="select0" onclick="showPubs(0); return false;">show selected</a> /
-                  <a href="" id="select1" onclick="showPubs(1); return false;">show all</a>)
+                  (
+                  <a href="" id="select0" onclick="showPubs(0); return false;">show selected</a> /
+                  <a href="" id="select1" onclick="showPubs(1); return false;">show all</a>
+                  )
                 </td>
               </tr>
             </tbody>
@@ -296,7 +298,7 @@
                   <a href="https://www.cs.utexas.edu/~bajaj/cvc/index.shtml">Chandrajit Bajaj</a>,
                   <a href="https://www.cs.utexas.edu/~huangqx/index.html">Qixing Huang</a>
                   <br>
-                  Arxiv, 2024
+                  ArXiv, 2024
                   <br>
                   <a href="https://arxiv.org/abs/2406.10167">arXiv</a>
                   /
