--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Publications</heading> &nbsp;&nbsp;
-                  (
-                  <a href="" id="select0" onclick="showPubs(0); return false;">show selected</a> /
-                  <a href="" id="select1" onclick="showPubs(1); return false;">show all</a>
-                  )
+                  <heading>Publications</heading>
                 </td>
               </tr>
             </tbody>
@@ -438,6 +434,6 @@ function showPubs(mode) {
   document.getElementById("select1").style.fontWeight = mode === 1 ? "bold" : "normal";
 }
 </script>
-<script>showPubs(0);</script>
+<script>showPubs(1);</script>
 
 </html>
