--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <a href="https://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>,
                   <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
-                  ArXiv, 2025
+                  arXiv, 2025
                   <br>
                   <a href="https://real2sim-eval.github.io/">website</a>
                   /
@@ -329,7 +329,7 @@
                   <a href="https://www.cs.utexas.edu/~bajaj/cvc/index.shtml">Chandrajit Bajaj</a>,
                   <a href="https://www.cs.utexas.edu/~huangqx/index.html">Qixing Huang</a>
                   <br>
-                  CVM, 2026
+                  arXiv, 2024
                   <p>
                     We achieve 4D neural implicit reconstruction from only a single-view scan 
                     using deformation and topology regularizations.
