--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </p>
                   <p>
                     I am a Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
-                    Prior to this, I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>. 
+                    Prior to this, I obtained my Bachelor's degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>. 
                     I am fortunate to receive mentorship from <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a> during my Ph.D. study, and <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>, 
                     <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a>, <a href="https://ericyi.github.io/">Prof. Li Yi</a> during my undergrad.
                   </p>
