update icra paper

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <a href="https://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>,
                   <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
-                  arXiv, 2025
+                  International Conference on Robotics & Automation (ICRA), 2026
                   <br>
                   <a href="https://real2sim-eval.github.io/">website</a>
                   /
